# rosForDemo

./: README.md
My_Robot/ROSSettingMarkDown/: GazboForDemo.md  LaunchForDemo.md  ROSFordemo.md  RVIZ2ForDemo.md  ServiceAndParameter.md  rosBagForDemo.md  rqtForDemo.md
My_Robot/RobotLearningMarkDown/: math.md
My_Robot/install/: local_setup.sh  setup.sh
My_Robot/install/localization/share/localization/: package.bash
My_Robot/install/localization_pkg/lib/localization_pkg/: localization_node
My_Robot/install/localization_pkg/share/localization_pkg/: package.dsv  package.ps1  package.sh
My_Robot/log/: latest_build
My_Robot/src/localization_pkg/: package.xml  setup.py
My_Robot/src/localization_pkg/localization_pkg/: localization_node.py
My_Robot/src/perception/: setup.py
My_Robot/src/perception_pkg/: CMakeLists.txt
My_Robot/src/perception_pkg/src/: perception_node.cpp
town_ws/: ForMessage.md
town_ws/install/: local_setup.sh  setup.sh
town_ws/log/: latest_build
town_ws/rosbag2_2023_09_21-23_11_18/: metadata.yaml  rosbag2_2023_09_21-23_11_18_0.db3
town_ws/src/village_interfaces/: CMakeLists.txt  Inteface_msg_srv.md
town_ws/src/village_interfaces/srv/: SellNovel.srv
town_ws/src/village_li/: setup.py
town_ws/src/village_li/launch/: village.launch.py
town_ws/src/village_li/village_li/: li3.py  li4.py  li4_pop.py
town_ws/src/village_wang/: CMakeLists.txt  package.xml
town_ws/src/village_wang/src/: wang2.cpp  wang2_pop.cpp
town_ws/src/village_zhang/: CMakeLists.txt
town_ws/src/village_zhang/src/: zhang3.cpp
(+23 files in other folders)
